Первая Итерация без линий границ

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="logo logo_place_header"></div>
         <div class="header__title">Научиться учиться</div>
-        <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link">Узнать&#8594</a></div>
+        <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594</a></div>
         <div class="header__main-illustration"></div>
         <div class="header__square-pic"></div>
     </header>
@@ -72,7 +72,7 @@
       <section class="feynman">
         <div class="feynman__title">Метод Фйенмана</div>
         <div class="feynman__subtitle">Выучить и не забыть</div>
-        <div class="feynman__link">Подробнее &#8594</div>
+        <a class="feynman__link" href="#">Подробнее &#8594</a>
       </section>
 
       <section class="kaufman">
