Первая Итерация без линий границ v.4

--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@
         <div class="footer__column_content_info">
           <div class="footer__column-heading">О Практикуме</div>
           <div class="footer__column-links">
-            <a class="footer__column-link" href="#">Главная</a>>
-            <a class="footer__column-link" href="#">Концепция</a>>
-            <a class="footer__column-link" href="#">Наставники</a>>
+            <a class="footer__column-link" href="#">Главная</a>
+            <a class="footer__column-link" href="#">Концепция</a>
+            <a class="footer__column-link" href="#">Наставники</a>
           </div>
         </div>
         <div class="footer__column_content_social">
