--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header class="header">
         <div class="logo logo_place_header"></div>
         <div class="header__title">Научиться учиться</div>
-        <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594</a></div>
+        <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594;</a></div>
         <div class="header__main-illustration"></div>
         <div class="header__square-pic"></div>
     </header>
@@ -26,6 +26,7 @@
               </p>
               <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
+        </div> 
       </section>
 
       <section class="digits">
@@ -72,7 +73,7 @@
       <section class="feynman">
         <div class="feynman__title">Метод Фйенмана</div>
         <div class="feynman__subtitle">Выучить и не забыть</div>
-        <a class="feynman__link" href="#">Подробнее &#8594</a>
+        <a class="feynman__link" href="#">Подробнее &#8594;</a>
       </section>
 
       <section class="kaufman">
@@ -127,7 +128,7 @@
       <div class="footer__columns">
         <div class="footer__column_content_copyright">
           <div class="logo logo_another_header"></div>
-          <div class="footer__author">&#169 2019. Виктор Абанькин</div>
+          <div class="footer__author">&#169; 2019. Виктор Абанькин</div>
         </div>
         <div class="footer__column_content_info">
           <div class="footer__column-heading">О Практикуме</div>
