--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/styles/style.css">
+  <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
 <body>
@@ -141,9 +141,9 @@
         <div class="footer__column_content_social">
           <div class="footer__column-heading">Соцсети</div>
           <div class="footer__column-links">
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="/images/facebook_color_white.svg" alt="Ф">Facebook</a>
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="/images/vk_color_white.svg" alt="вконтакте">ВКонтакте</a>
-            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="/images/instagram_color_white.svg" alt="Инстаграм">Instagram</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Ф">Facebook</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="вконтакте">ВКонтакте</a>
+            <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a>
           </div>
         </div>
       </div>
