--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./styles/normalize.css">
   <link rel="stylesheet" href="./styles/style.css">
   <title>Научиться учиться</title>
 </head>
@@ -10,9 +11,9 @@
   <div class="page">  
     <header class="header">
         <div class="logo logo_place_header"></div>
-        <div class="header__title">Научиться учиться</div>
-        <div class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594;</a></div>
-        <div class="header__main-illustration"></div>
+        <h1 class="header__title">Научиться учиться</h1>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594;</a></p>
+        <img class="header__main-illustration" src="../images/header-image.png" alt="Иллюстрация"></img>
         <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -22,7 +23,7 @@
           <div class="two-columns__main-text">
               <p class="two-columns__paragraph">Ни в школе, ни в институте нас не учат тому, как правильно изучать материал. Мы готовимся к экзаменам и учим билеты. Мы тренируемся решать однообразные задачи, чтобы лучше сдать тест, но часто в итоге это не дает нам реального знания. Зубрежка быстро выветривается и не приносит пользы.</p>
               <p class="two-columns__paragraph">
-                <span class="two-columns__span-accent">Вывод:</span>учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
+                <span class="two-columns__span-accent">Вывод:</span> учиться тоже нужно уметь, но почему-то этому мало где учат. Что с этим делать?
               </p>
               <p class="two-columns__paragraph">Конкретные техники и упражнения помогают изменить подход к обучению, сделать его эффективным и захватывающим. Эти же техники применяются на примере обучения в Практикуме.</p>
           </div>
@@ -30,97 +31,97 @@
       </section>
 
       <section class="digits">
-        <div class="section-title">Цифры и факты</div>
-        <div class="section-subtitle">Про учёбу и мозг</div>
-        <div class="table">
-          <div class="table__cell">
-            <div class="table__heading">86 миллиардов</div>
-            <div class="table__text">Число нейронов в мозге человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">2.1 миллиарда</div>
-            <div class="table__text">Число нуждающихся в повышении квалификации</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1000 терабайт</div>
-            <div class="table__text">Объём памяти человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">500 триллионов</div>
-            <div class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">420 миллионов</div>
-            <div class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</div>
-            <div class="table__text">Всемирный Банк, 2017</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">17–20 лет</div>
-            <div class="table__text">Пик обучаемости</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1885 год</div>
-            <div class="table__text">Открытие кривой забывания</div>
-          </div>
-          <div class="table__cell">
-            <div class="table__heading">1889 год</div>
-            <div class="table__text">Открытие условного рефлекса</div>
-          </div>
-        </div>
+        <h3 class="section-title">Цифры и факты</h3>
+        <p class="section-subtitle">Про учёбу и мозг</p>
+        <ul class="table">
+          <li class="table__cell">
+            <h4 class="table__heading">86 миллиардов</h4>
+            <p class="table__text">Число нейронов в мозге человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">2.1 миллиарда</h4>
+            <p class="table__text">Число нуждающихся в повышении квалификации</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1000 терабайт</h4>
+            <p class="table__text">Объём памяти человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">500 триллионов</h4>
+            <p class="table__text">Число ответственных за обучение нервных синапсов у взрослого человека</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">420 миллионов</h4>
+            <p class="table__text">Число взрослых людей моложе 25 лет, не имеющих образования для трудоустройства</p>
+            <p class="table__text">Всемирный Банк, 2017</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">17–20 лет</h4>
+            <p class="table__text">Пик обучаемости</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1885 год</h4>
+            <p class="table__text">Открытие кривой забывания</p>
+          </li>
+          <li class="table__cell">
+            <h4 class="table__heading">1889 год</h4>
+            <p class="table__text">Открытие условного рефлекса</p>
+          </li>
+        </ul>
       </section>
 
       <section class="feynman">
-        <div class="feynman__title">Метод Фйенмана</div>
-        <div class="feynman__subtitle">Выучить и не забыть</div>
-        <a class="feynman__link" href="#">Подробнее &#8594;</a>
+        <h2 class="feynman__title">Метод Фейнмана</h2>
+        <p class="feynman__subtitle">Выучить и не забыть</p>
+        <a class="feynman__link" href="#">Подробнее &rarr;</a>
       </section>
 
       <section class="kaufman">
-        <div class="section-title section-title_theme_dark">Принципы обучения</div>
-        <div class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</div>
-        <div class="table table_theme_dark">
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">1</div>
-            <div class="table__text table__text_theme_dark">Выберите привлекательный проект.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">2</div>
-            <div class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">3</div>
-            <div class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">4</div>
-            <div class="table__text table__text_theme_dark">Разбейте навык на элементы.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">5</div>
-            <div class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">6</div>
-            <div class="table__text table__text_theme_dark">Устраните препятствия для занятий.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">7</div>
-            <div class="table__text table__text_theme_dark">Выделите специальное время для занятий.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">8</div>
-            <div class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">9</div>
-            <div class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</div>
-          </div>
-          <div class="table__cell_theme_dark">
-            <div class="table__heading table__heading_theme_dark">10</div>
-            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</div>
-          </div>
-        </div>
+        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+        <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
+        <ul class="table table_theme_dark">
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">1</h4>
+            <p class="table__text table__text_theme_dark">Выберите привлекательный проект.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">2</h4>
+            <p class="table__text table__text_theme_dark">Сосредоточьтесь на каком-то одном навыке.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">3</h4>
+            <p class="table__text table__text_theme_dark">Определите целевой уровень мастерства.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">4</h4>
+            <p class="table__text table__text_theme_dark">Разбейте навык на элементы.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">5</h4>
+            <p class="table__text table__text_theme_dark">Приготовьте всё необходимое для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">6</h4>
+            <p class="table__text table__text_theme_dark">Устраните препятствия для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">7</h4>
+            <p class="table__text table__text_theme_dark">Выделите специальное время для занятий.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">8</h4>
+            <p class="table__text table__text_theme_dark">Создайте быстрые петли обратной связи.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">9</h4>
+            <p class="table__text table__text_theme_dark">Занимайтесь по расписанию, короткими интенсивными интервалами.</p>
+          </li>
+          <li class="table__cell table__cell_theme_dark">
+            <h4 class="table__heading table__heading_theme_dark">10</h4>
+            <div class="table__text table__text_theme_dark">Уделяйте внимание количеству и скорости.</p>
+          </li>
+        </ul>
         <div class="kaufman__triangle"></div>
       </section>
     </main>
