--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
         <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594;</a></p>
-        <img class="header__main-illustration" src="../images/header-image.png" alt="Иллюстрация"></img>
+        <img class="header__main-illustration" src="./images/header-image.png" alt="Иллюстрация"></img>
         <div class="header__square-pic"></div>
     </header>
     <main class="content">
@@ -127,25 +127,25 @@
     </main>
     <footer class="footer">
       <div class="footer__columns">
-        <div class="footer__column_content_copyright">
-          <div class="logo logo_another_header"></div>
-          <div class="footer__author">&#169; 2019. Виктор Абанькин</div>
+        <div class="footer__column footer__column_content_copyright">
+          <div class="logo logo_place_footer"></div>
+          <p class="footer__author">&#169; 2019. Виктор Абанькин</p>
         </div>
-        <div class="footer__column_content_info">
-          <div class="footer__column-heading">О Практикуме</div>
-          <div class="footer__column-links">
+        <div class="footer__column footer__column_content_info">
+          <h5 class="footer__column-heading">О Практикуме</h5>
+          <nav class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
             <a class="footer__column-link" href="#">Концепция</a>
             <a class="footer__column-link" href="#">Наставники</a>
-          </div>
+          </nav>
         </div>
-        <div class="footer__column_content_social">
-          <div class="footer__column-heading">Соцсети</div>
-          <div class="footer__column-links">
+        <div class="footer__column footer__column_content_social">
+          <h5 class="footer__column-heading">Соцсети</h5>
+          <nav class="footer__column-links">
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Ф">Facebook</a>
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="вконтакте">ВКонтакте</a>
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/instagram_color_white.svg" alt="Инстаграм">Instagram</a>
-          </div>
+          </nav>
         </div>
       </div>
     </footer>
