--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
         <div class="logo logo_place_header"></div>
         <h1 class="header__title">Научиться учиться</h1>
-        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&#8594;</a></p>
+        <p class="header__subtitle">Какие современные и эффективные подходы к обучению вы можете использовать в своей жизни? <a class="header__link" href="#">Узнать&rarr;</a></p>
         <img class="header__main-illustration" src="./images/header-image.png" alt="Иллюстрация">
         <div class="header__square-pic"></div>
     </header>
@@ -31,7 +31,7 @@
       </section>
 
       <section class="digits">
-        <h3 class="section-title">Цифры и факты</h3>
+        <h2 class="section-title">Цифры и факты</h2>
         <p class="section-subtitle">Про учёбу и мозг</p>
         <ul class="table">
           <li class="table__cell">
@@ -78,7 +78,7 @@
       </section>
 
       <section class="kaufman">
-        <h3 class="section-title section-title_theme_dark">Принципы обучения</h3>
+        <h2 class="section-title section-title_theme_dark">Принципы обучения</h2>
         <p class="section-subtitle section-subtitle_theme_dark">от Джоша Кауфмана</p>
         <ul class="table table_theme_dark">
           <li class="table__cell table__cell_theme_dark">
@@ -132,7 +132,7 @@
           <p class="footer__author">&#169; 2019. Виктор Абанькин</p>
         </div>
         <div class="footer__column footer__column_content_info">
-          <h5 class="footer__column-heading">О Практикуме</h5>
+          <h2 class="footer__column-heading">О Практикуме</h2>
           <nav class="footer__column-links">
             <a class="footer__column-link" href="#">Главная</a>
             <a class="footer__column-link" href="#">Концепция</a>
@@ -140,7 +140,7 @@
           </nav>
         </div>
         <div class="footer__column footer__column_content_social">
-          <h5 class="footer__column-heading">Соцсети</h5>
+          <h2 class="footer__column-heading">Соцсети</h2>
           <nav class="footer__column-links">
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/facebook_color_white.svg" alt="Ф">Facebook</a>
             <a class="footer__column-link" href="#"><img class="footer__social-icon" src="./images/vk_color_white.svg" alt="вконтакте">ВКонтакте</a>
