--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <p class="cards__description">Повторите про себя, запишите, расскажите другу: вам только кажется, что вы владеете новой темой.</p>
           </li>
           <li class="cards__item">
-            <div class="cards__image"><div>
+            <div class="cards__image"></div>
             <h4 class="cards__title"></h4>
             <p class="cards__description"></p>
           </li>
@@ -71,10 +71,10 @@
         <p class="section-subtitle">Для тех, кто любит прокрастинировать</p>
         <div class="video__iframes">
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
+            <iframe width="515" height="316" src="https://www.youtube.com/embed/arj7oStGLkU" frameborder="0" allowfullscreen></iframe>
           </div>
           <div class="video__iframe">
-            <iframe id="ytplayer" type="text/html" width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
+            <iframe width="515" height="316" src="https://www.youtube.com/embed/5MgBikgcWnY" frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
       </section>
