--- a/index.html
+++ b/index.html
@@ -201,10 +201,10 @@
         <h2 class="section-title">Полезные ресурсы</h2>
         <p class="section-subtitle">Больше материалов о техниках и лайфхаках обучения</p>
         <div class="resources__logo-zone">
-          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="#">
-          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="#">
-          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="#">
-          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="#">
+          <img class="resources__logo" src="./images/logo/resources-arzamas.svg" alt="Арзамас">
+          <img class="resources__logo" src="./images/logo/resources-n1.svg" alt="Н-1">
+          <img class="resources__logo" src="./images/logo/resources-strelka.svg" alt="Стрелка">
+          <img class="resources__logo" src="./images/logo/resources-polka.svg" alt="Полка">
         </div>
       </section>
 
